<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FoodChoose"
    android:rowCount="7"
    android:columnCount="2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_choose_food"
        android:layout_row="0"
        android:layout_column="0"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="center_vertical"
        android:text="@string/with_you"
        />

    <ToggleButton
        android:id="@+id/toggle_with_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:textOn="@string/toggle_yes"
        android:textOff="@string/toggle_no"
        />

    <CheckBox
        android:id="@+id/checkbox_whopper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/checkbox_whopper"
        />
    <CheckBox
        android:id="@+id/checkbox_fry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/checkbox_fry"
        />
    <CheckBox
        android:id="@+id/checkbox_beverages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/checkbox_beverages"
        />
    <CheckBox
        android:id="@+id/checkbox_sauce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:text="@string/checkbox_sauce"
        />
    <CheckBox
        android:id="@+id/checkbox_desert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:text="@string/checkbox_desert"
        />

</GridLayout>