<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/first"
        android:backgroundTint="#EDE7F6"
        android:textColor="#2196F3"
        />
    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/second"
        android:backgroundTint="#EDE7F6"
        android:textColor="#2196F3"
        android:layout_marginHorizontal="4dp"
        />
    <Button
        android:id="@+id/button_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/third"
        android:backgroundTint="#EDE7F6"
        android:textColor="#2196F3"
        />



</LinearLayout>