<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="12dp"
    tools:context=".Cat">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="360dp"
        android:layout_height="240dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/white_siberian_cat"
        android:scaleType="fitXY"
        />
    <Button
        android:id="@+id/button_know_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#EDE7F6"
        android:textColor="@color/black"
        android:text="@string/know_more"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_gravity="start"
        android:text="@string/title_cats"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/cat_definition"
        />
</LinearLayout>